Implement a logic of partnership creation